grammars/tree-sitter/iron/grammar.js
    source_file: $ => repeat($._declaration),

    // D-09: patch_declaration inserted directly after object_declaration
    // (natural object/patch/interface/enum order).
    _declaration: $ => choice(
      $.import_declaration,
      $.object_declaration,
      $.patch_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.func_declaration,
      $.method_declaration,
      $.extern_func_declaration,
      $.val_declaration,
      $.var_declaration,
    ),

    // Keywords generated from src/lexer/lexer.c kw_table at configure time.
    // 'and', 'await', 'comptime', 'copy', 'defer', 'drop', 'elif', 'else', 'enum', 'extends', 'extern', 'false', 'for', 'free', 'func', 'heap', 'if', 'impl', 'import', 'in', 'init', 'interface', 'is', 'leak', 'match', 'mut', 'nocopy', 'not', 'null', 'object', 'or', 'parallel', 'patch', 'pool', 'private', 'pub', 'pure', 'rc', 'readonly', 'return', 'self', 'spawn', 'super', 'true', 'unchecked', 'val', 'var', 'weak', 'while' expands to 'and', 'await', ..., 'while'.
    // Present so test_grammar_keyword_drift_tree_sitter has a substitution
    // target even though the full grammar inlines keyword literals in
    // concrete rules.
    object_declaration: $ => seq(
      optional(field('marker', $.nocopy_modifier)),
      'object',
      field('name', $.identifier),
      optional($.generic_params),
      optional(seq('extends', field('parent', $.identifier))),
      optional(seq('impl', field('implements',
          seq($.identifier, repeat(seq(',', $.identifier)))))),
      '{',
      repeat($._object_member),
      '}',
    ),

    // D-06: _object_member expanded to include init_declaration and
    // block_method_declaration alongside the pre-v3 field_declaration.
    // Phase 35 GRM-06 (Plan 35-01): drop_block + copy_block added so v4
    // `drop { ... }` / `copy { ... }` hooks inside object bodies parse.
    _object_member: $ => choice(
      $.field_declaration,
      $.init_declaration,
      $.block_method_declaration,
      $.drop_block,
      $.copy_block,
    ),
    // D-19/D-23 (Plan 13-02): optional `pub` prefix on field_declaration so
    // v3 `pub val id: Int` / `pub var health: Int` (per
    // tests/integration/v3_pub_field_synthesis.iron and v3_modifiers.txt
    // Case 1) parses without ERROR nodes. Plan 13-01 omitted this; the
    // visibility_modifier prefix discipline mirrors func_declaration (line
    // 199) and init_declaration (line 291).
    field_declaration: $ => seq(
      optional($.visibility_modifier),
      field('qualifier', choice('val', 'var')),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(','),
    ),

    // interface Name { func sig() -> T  func other(p: T) }
    interface_declaration: $ => seq(
      'interface',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      repeat($.method_signature),
      '}',
    ),

    // Phase 87 IFACE-01/IFACE-03 (Plan 13-03 deviation): interface method
    // signatures accept an optional `readonly`/`pure` tier modifier prefix
    // (parser.c:4501-4525) AND an optional default body `{ ... }` after the
    // return type (parser.c:4554-4560). Surfaced by tests/integration/
    // v3_iface_default_body.iron (`readonly func describe() -> Int { return 42 }`
    // inside an `interface` body) once Plan 13-03 trimmed the integration-corpus
    // skip list. Mirrors the modifier-prefix discipline applied to
    // func_declaration (D-13) and block_method_declaration (D-11).
    method_signature: $ => seq(
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      optional(field('body', $.block)),
    ),

    // enum Name[<Generics>] { Variant, Variant(T), Variant(T, U) }
    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      optional(seq(
        $.enum_variant,
        repeat(seq(',', $.enum_variant)),
        optional(','),
      )),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '(',
        optional(seq($._type, repeat(seq(',', $._type)))),
        ')',
      )),
      optional(seq('=', field('ordinal', $.integer_literal))),
    ),

    // func [fusible] name[<G>](params) [-> T] { body }
    // Method form: func TypeName.method[<G>](params) [-> T] { body }
    // Array extension: func [T].method(...) { body }
    // D-13: optional(visibility_modifier) + repeat(mutation_tier_modifier)
    // prefix between @fusible and 'func' (e.g. `pub func`, `pure func`,
    // `pub readonly func` at top level — needed by v3 fixtures like
    // v3_pure_method.iron and v3_pub_field_synthesis.iron).
    func_declaration: $ => seq(
      optional(seq('@', 'fusible')),
      optional($.visibility_modifier),
      repeat($.mutation_tier_modifier),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    val_declaration: $ => seq(
      'val',
      field('binding', choice($.identifier, $.tuple_binding)),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    var_declaration: $ => seq(
      'var',
      field('binding', choice($.identifier, $.tuple_binding, '_')),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    // Tuple destructure binding: val (x, y) = pair — Phase 59 P01d
    tuple_binding: $ => seq(
      '(',
      choice($.identifier, '_'),
      ',',
      choice($.identifier, '_'),
      repeat(seq(',', choice($.identifier, '_'))),
      ')',
    ),

    // extern func puts(s: String) -> Int   — no body
    generic_params: $ => seq(
      '[',
      seq($.identifier, repeat(seq(',', $.identifier))),
      ']',
    ),

    parameter_list: $ => seq('(', optional(commaSep1($.parameter)), ')'),
    // D-04: optional `mut` modifier prefix on parameter (legacy v2 receiver-
    // form tolerance — semantically rejected by parser as IRON_ERR_V3_MUT_*
    // but syntactically tolerated to avoid ERROR nodes on v2 code mid-
    // migration; LSP-side QF-01 surfaces the codemod).
    parameter: $ => seq(
      optional(field('modifier', $.param_mut_modifier)),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // ── v3 modifier rules (D-01) ────────────────────────────────────────
    // Named modifier rules (not anonymous-inline tokens): GRM-02 highlights
    // queries express modifier capture as `(visibility_modifier) @keyword`
    // and `(mutation_tier_modifier) @keyword.modifier` against the named
    // structural node. `mutation_tier_modifier` accepts both `readonly` and
    // `pure`; multi-tier stacking via repeat(...) at the call site.
    visibility_modifier:    $ => 'pub',
    mutation_tier_modifier: $ => choice('readonly', 'pure'),
    param_mut_modifier:     $ => 'mut',

    // ── v3 init declaration (D-05) ─────────────────────────────────────
    // init [name](params) { body }   |  pub init(params) { body }
    // Anonymous form: `init(args) { body }` (no name).
    // Named form:     `init zero() { body }`.
    block: $ => seq('{', repeat($._statement), '}'),

    _statement: $ => choice(
      $.val_declaration,
      $.var_declaration,
      $.assignment_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.match_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.defer_statement,
      $.free_statement,
      $.leak_statement,
      $.arena_block,
      $.expression_statement,
    ),

    for_statement: $ => seq(
      'for',
      field('variable', $.identifier),
      'in',
      field('iterable', $._expression),
      // `parallel` modifier: `for i in n parallel { ... }` (Phase 49 pfor)
      optional(field('modifier', 'parallel')),
      field('body', $.block),
    ),

    match_statement: $ => seq(
      'match',
      field('subject', $._expression),
      '{',
      repeat($.match_arm),
      optional($.match_else_arm),
      '}',
    ),
    match_arm: $ => seq(
      field('pattern', $._pattern),
      '->',
      field('body', $._match_arm_body),
    ),
    match_else_arm: $ => seq(
      'else', '->',
      field('body', $._match_arm_body),
    ),
    _match_arm_body: $ => choice(
      $.block,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.assignment_statement,
      $._expression,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    leak_statement: $ => prec.right(2, seq('leak', $._expression)),

    // Phase 35 GRM-06 (Plan 35-01): in <arena_expr> { ... } block form
    // mirrors parser.c:3032 IRON_TOK_IN statement-position dispatch. The
    // arena expression can be any expression (typically an identifier or
    // member access like `game.frame_arena`).
    expression_statement: $ => prec(-1, $._expression),

    // ── Expressions ────────────────────────────────────────────────────

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.is_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_literal,
      $.lambda_expression,
      $.heap_expression,
      $.rc_expression,
      $.weak_rc_expression,
      $.comptime_expression,
      $.await_expression,
      $.spawn_expression,
      $.string_literal,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.null_literal,
      $.self_expression,
      $.identifier,
    ),

    unary_expression: $ => prec.right(13, seq(
      field('op', choice('-', '!', '~', 'not')),
      $._expression,
    )),

    call_expression: $ => prec.left(14, seq(
      field('function', $._expression),
      '(',
      optional(commaSep1($._expression)),
      ')',
    )),

    member_expression: $ => prec.left(14, seq(
      field('object', $._expression),
      '.',
      field('property', $.identifier),
    )),

    index_expression: $ => prec.left(14, seq(
      field('collection', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    heap_expression:     $ => prec.right(13, seq(
      'heap',
      optional($.heap_options),
      $._expression,
    )),
    rc_expression:       $ => prec.right(13, seq('rc',       $._expression)),
    // Phase 35 GRM-06 (Plan 35-01): weak_rc_expression covers both the
    // null form (`weak rc null`) and the bound form (`weak rc Foo(...)`);
    // `weak` is a keyword (lexer.c:76 IRON_TOK_WEAK).
    weak_rc_expression:  $ => prec.right(13, seq(
      'weak', 'rc', $._expression,
    )),
    // NOTE: `leak` lives ONLY at statement position (see leak_statement in
    // _statement choice). Parser.c:3018 IRON_TOK_LEAK is reached exclusively
    // from iron_parse_stmt — there is no leak case in iron_parse_primary, so
    // `val p = leak heap Point(...)` does NOT parse in ironc today (the v4
    // fixtures using that form may rely on a future parser extension or are
    // intentional negatives gated by @expected-pass-after: phase-31). The
    // tree-sitter grammar matches ironc's surface here.
    _pattern: $ => choice(
      $.literal_pattern,
      $.wildcard_pattern,
      $.variant_pattern,
      $.identifier_pattern,
    ),

    identifier_pattern: $ => $.identifier,

    // EnumName.Variant or EnumName.Variant(args)
    _type: $ => choice(
      $.array_type,
      $.bounded_vector_type,
      $.function_type,
      $.tuple_type,
      $.pointer_type,
      $.rc_type,
      $.weak_rc_type,
      $.nullable_type,
      $.generic_type,
      $.type_identifier,
    ),

    type_identifier: $ => $.identifier,

    nullable_type: $ => prec(1, seq($.type_identifier, '?')),

    generic_type: $ => prec(2, seq(
      $.type_identifier,
      '[',
      seq($._type, repeat(seq(',', $._type))),
      ']',
    )),

    // [T] or [T; Size]
    pointer_type: $ => prec.right(seq(
      optional(field('nullable', '?')),
      '*',
      optional(field('mutable', 'var')),
      optional(field('regime', 'unchecked')),
      $._type,
    )),

    // Phase 35 GRM-06 (Plan 35-01) [Rule 2 - Missing Critical]: rc_type and
    // weak_rc_type — type-position counterparts to rc_expression /
    // weak_rc_expression. Real v4 fixtures bind `weak rc Foo` as a type
    // (`var observer: weak rc Foo = weak rc null`); without these rules the
    // type annotation would surface as an ERROR node. `rc T` and `weak rc T`
    // are surface aliases for ownership-flavored references to T.
    rc_type:      $ => prec.right(seq('rc',   $._type)),
    weak_rc_type: $ => prec.right(seq('weak', 'rc', $._type)),

    // Phase 35 GRM-06 (Plan 35-01): nocopy_modifier — a one-token marker
    // that may prefix an object_declaration or patch_declaration (`nocopy
    // object FileHandle { ... }`). Reserved as IRON_TOK_NOCOPY since
    // Phase 16 (lexer.c:55). Modeled as a named rule (not an inline token)
    // so downstream tree-queries can target the marker structurally.
    nocopy_modifier: $ => 'nocopy',

    // Phase 35 GRM-06 (Plan 35-01): drop_block / copy_block — destructor +
    // copy hooks inside an object/patch body (DROP-01 / COPY-01).
    //   drop { println("free: {self.name}") }
    //   copy { val dummy = 0 }
    // Both reuse the existing $.block rule for the body.
    drop_block: $ => seq('drop', field('body', $.block)),
    integer_literal: $ => token(choice(
      /0[xX][0-9a-fA-F_]+/,  // hex
      /0[bB][01_]+/,         // binary
      /[0-9][0-9_]*/,        // decimal
    )),

    null_literal: $ => 'null',

    // Strings. The lexer emits IRON_TOK_INTERP_STRING as one token whenever
    // it sees an unescaped '{' inside the quotes; tree-sitter has its own
    // scanner so we model strings as a single `string_literal` rule whose
    // interior may contain interpolations. The `interpolated_string` wrapper
    // rule (used by folds.scm + highlights.scm) is an alias that fires when
    // at least one `interpolation` child is present — that distinction is
    // not encoded in the grammar (tree-sitter does not support optional-
    // marker choice rules without conflicts) but downstream queries can
    // match `(string_literal (interpolation))` for the interpolated shape.
    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_body,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_body: $ => token.immediate(prec(1, /[^"\\{}]+/)),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
