grammars/tree-sitter/iron/test/corpus/v4_syntax_forms.txt
================================================================================
generic construction with several type arguments
================================================================================

func main() {
    var m = Map[String, Int]()
    val l = List[Int?]()
    val x = xs[i]
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list)
    (block
      (var_declaration
        (identifier)
        (call_expression
          (generic_expression
            (identifier)
            (type_arguments
              (type_identifier
                (identifier))
              (type_identifier
                (identifier))))))
      (val_declaration
        (identifier)
        (call_expression
          (generic_expression
            (identifier)
            (type_arguments
              (nullable_type
                (type_identifier
                  (identifier)))))))
      (val_declaration
        (identifier)
        (index_expression
          (identifier)
          (identifier))))))

================================================================================
pub declarations and bounded generic parameters
================================================================================

pub object Map[K: Hashable, V] {
    val n: Int
}
pub enum Dir { Up, Down }
pub interface Shape {
    readonly func area() -> Int
}

--------------------------------------------------------------------------------

(source_file
  (object_declaration
    (visibility_modifier)
    (identifier)
    (generic_params
      (identifier)
      (type_identifier
        (identifier))
      (identifier))
    (field_declaration
      (identifier)
      (type_identifier
        (identifier))))
  (enum_declaration
    (visibility_modifier)
    (identifier)
    (enum_variant
      (identifier))
    (enum_variant
      (identifier)))
  (interface_declaration
    (visibility_modifier)
    (identifier)
    (method_signature
      (mutation_tier_modifier)
      (identifier)
      (parameter_list)
      (type_identifier
        (identifier)))))

================================================================================
var and val parameters with trailing commas
================================================================================

func swap(var game: Game, val x: Int, y: Int,) {
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list
      (parameter
        (param_mut_modifier)
        (identifier)
        (type_identifier
          (identifier)))
      (parameter
        (param_mut_modifier)
        (identifier)
        (type_identifier
          (identifier)))
      (parameter
        (identifier)
        (type_identifier
          (identifier))))
    (block)))

================================================================================
address-of, slices and nullable generic types
================================================================================

func main() {
    val p = &xs[0]
    val tail = xs[1..3]
    val m: Map[String, Int]? = null
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list)
    (block
      (val_declaration
        (identifier)
        (unary_expression
          (index_expression
            (identifier)
            (integer_literal))))
      (val_declaration
        (identifier)
        (slice_expression
          (identifier)
          (integer_literal)
          (integer_literal)))
      (val_declaration
        (identifier)
        (nullable_type
          (generic_type
            (type_identifier
              (identifier))
            (type_identifier
              (identifier))
            (type_identifier
              (identifier))))
        (null_literal)))))

================================================================================
bare block statement and tuple loop variable
================================================================================

func main() {
    {
        val inner = outer
    }
    for (k, v) in m {
        println(k)
    }
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list)
    (block
      (block
        (val_declaration
          (identifier)
          (identifier)))
      (for_statement
        (tuple_binding
          (identifier)
          (identifier))
        (identifier)
        (block
          (expression_statement
            (call_expression
              (identifier)
              (identifier))))))))

================================================================================
constant expression match arms
================================================================================

func describe(n: Int) -> String {
    match n {
        -5 -> return "minus five"
        1 << 3 -> return "eight"
        else -> return "other"
    }
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier
          (identifier))))
    (type_identifier
      (identifier))
    (block
      (match_statement
        (identifier)
        (match_arm
          (constant_pattern
            (integer_literal))
          (return_statement
            (string_literal)))
        (match_arm
          (constant_pattern
            (integer_literal)
            (integer_literal))
          (return_statement
            (string_literal)))
        (match_else_arm
          (return_statement
            (string_literal)))))))

================================================================================
type match arms
================================================================================

func kind(sh: Shape) -> String {
    match sh {
        Circle(c) -> { return "circle" }
        Dot -> { return "dot" }
    }
}

--------------------------------------------------------------------------------

(source_file
  (func_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier
          (identifier))))
    (type_identifier
      (identifier))
    (block
      (match_statement
        (identifier)
        (match_arm
          (type_pattern
            (identifier)
            (identifier))
          (block
            (return_statement
              (string_literal))))
        (match_arm
          (identifier_pattern
            (identifier))
          (block
            (return_statement
              (string_literal))))))))
